# shapesmith.deprecated

./: .gitignore  Gruntfile.js  INSTALL.MacOSX.md  INSTALL.MacOSXErlangFromSource.md  INSTALL.Optional.md  INSTALL.md  INSTALL.ubuntu  INSTALL.ubuntu.md  LICENSE  README.md  UPGRADE.md  package.json  smoketest.txt  start.sh  todo.txt  ubuntu.txt
artwork/: color_scheme.url  logo_bw.xcf  shutterstock_17798254.eps  shutterstock_17798254.eps.txt  smith2.xcf  stock_temp.xcf
artwork/icons/: convert.sh
config/: devel.config.json
css/: modeller.css  shapesmith.less
css/less/: designs.less
js/: main.designs.js  main.ui.js  package.json
js/src/: asyncAPI.js  calculations.js  colors.js  extrudeMV.js  geometrygraph.js  geomnode.js  geomtoolbar.js  geomvertexMV.js  heightanchorview.js  icons.js  interactioncoordinator.js  maintoolbar.js  pointMV.js  polylineMV.js  scenevieweventgenerator.js  selection.js  settings.js  toolbar.js  variableMV.js  variablegraph.js  variablemanager.js  vertexmodelmanager.js  webdriverutils.js  workplanecoordinator.js  worldcursor.js
js/test/: test.browser.js  test.html
node/: .gitignore  README  ec2.config  prod.config  rebar  rebar.config  session.config  start-dev.sh  start-ec2.sh  start-prod.sh  start-session.sh  start.sh
node/ebin/: node_views_designs.walrus  node_views_modeller.walrus  node_views_signin.walrus  node_views_signup.walrus  node_views_signup_email.walrus
node/include/: node_auth.hrl
node/priv/: dispatch.conf
node/src/: node.app.src  node.erl  node_app.erl  node_brep_db.erl  node_brep_purge_job.erl  node_commit_adapter.erl  node_db.erl  node_design_adapter.erl  node_design_resource.erl  node_designs_resource.erl  node_disk_db.erl  node_document_db.erl  node_document_resource.erl  node_documents_resource.erl  node_fs_resource.erl  node_gen_resource.erl  node_generic_resource.erl  node_geom_adapter.erl  node_geom_db.erl  node_geom_get_resource.erl  node_geom_post_resource.erl  node_geom_resource.erl  node_hash.erl  node_home_redirect_resource.erl  node_json_export_adapter.erl  node_json_resource.erl  node_json_schema.erl  node_local_auth.erl  node_log.erl  node_master.erl  node_mem_db.erl  node_mesh_adapter.erl  node_mesh_db.erl  node_mesh_resource.erl  node_model_resource.erl  node_modeller_resource.erl  node_post_get_resource.erl  node_publish_stl_adapter.erl  node_ref_adapter.erl  node_ref_resource.erl  (+19 more)
node/test/: node_commit_resource_SUITE.erl  node_db_SUITE.erl  node_design_resource_SUITE.erl  node_document_resource_SUITE.erl  node_geom_resource_SUITE.erl  node_home_resource_SUITE.erl  node_local_auth_SUITE.erl  node_master_SUITE.erl  node_mem_db_SUITE.erl  node_mesh_resource_SUITE.erl  node_model_resource_SUITE.erl  node_purge_SUITE.erl  node_signup_SUITE.erl  node_stl_resource_SUITE.erl
nodes/: .gitignore  Makefile  erl_crash.dump  rebar  rebar.config  session.config  start  start-dev.sh  start-session.sh  start-xcode.sh  xcode-worker.config
nodes/apps/worker/priv/: CMakeLists.txt
nodes/apps/worker/priv/fonts/: README.txt
nodes/apps/worker/priv/include/: Builder.h  OCC.h
nodes/apps/worker/priv/src/: Builder.cxx  Tesselate.cxx  Util.cxx  s11n.cxx  worker.cxx
nodes/apps/worker/priv/test/: BuilderTest.cc
nodes/ui/: .gitignore
nodes/worker_master/: .gitignore
src/: asyncAPI.js  calculations.js  designer.js  designs.js  extrudeMV.js  geomnode.js  geomtoolbar.js  geomvertexMV.js  heightanchorview.js  icons.js  interactioncoordinator.js  main.designs.js  main.ui.js  maintoolbar.js  pointMV.js  polylineMV.js  scenevieweventgenerator.js  selection.js  settings.js  toolbar.js  trackball.js  variableMV.js  variablemanager.js  vertexMV.js  vertexmodelmanager.js  workplaneMV.js  worldcursor.js
src/api/: app.js  disk_db.js  server.js
src/casgraph/: graph.js
src/latheapi/: adapter.js  bspdb.js  normalize.js  pool.js  worker.js
src/layers/: layertreeMV.js  layertreemanager.js
src/lib/: jquery.mustache.js
src/modelviews/: actionsoverlayMV.js  cubeMV.js  geomvertexMV.js  heightOnWidthDepthAnchorView.js  heightanchorview.js  materialsdomview.js  modelgraph.js  objecttree.js  originDOMView.js  originview.js  pointMV.js  polylineMV.js  sphereMV.js  subtractMV.js  transforminitiator.js  variableMV.js  (+3 more)
static/: thingyverse.html
templates/: designs.hbs  modeller.hbs
test/: specs.js  test.js  unit.browser.js  unit.js
web/: index.html  ui.html
worker/: .gitignore  CMakeLists.txt  WorkerConfig.h.in
worker/include/: Builder.h  CompositeShape.h  Geometry.h  Line.h  OCC.h  Tesselate.h  Transform.h  Util.h
worker/src/: Builder.cxx  CompositeShape.cxx  Geometry.cxx  Geometry.h  Line.cxx  Tesselate.cxx  Transform.cxx  Util.cxx  worker.cxx
worker/test/: BuilderTest.cc  line.cc  sample.cc
(+485 files in other folders)
